--- a/yes.html
+++ b/yes.html
@@ -7,10 +7,10 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Hurrayyyy!!</h1>
+                <h1 class = "header_text">Knew you would say yes!</h1>
             </div>
             <div class="gif_container">
-                <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
+                <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcThsOW5jZDRwODZpY2pleXhvN3pmeGg3YWoxenI1emJzM2x0bjFqcyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/MDJ9IbxxvDUQM/giphy.gif" alt="Cute animated illustration">
             </div>
         </div>
        
